# social-media-tools

./: .editorconfig  .gitignore  0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.well-known/: security.txt
.well-known/groove/: manifest.json
dipstick/: .guix-channel  ARCHITECTURE.md  CHANGELOG.adoc  CHANGELOG.md  CLAUDE.md  Justfile  MAINTAINERS.md  README.adoc  ROADMAP.adoc  RSR_COMPLIANCE.md  RSR_OUTLINE.adoc  compose.toml  flake.nix  justfile
dipstick/.github/: dependabot.yml
dipstick/.github/workflows/: ci.yml  codeql.yml  container-policy.yml  deploy.yml  language-policy.yml  scorecard-enforcer.yml  scorecard.yml
dipstick/.machine_readable/: NEUROSYM.scm
dipstick/.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  PLAYBOOK.a2ml  STATE.a2ml
dipstick/.well-known/: ai.txt  humans.txt  security.txt
dipstick/config/: analyzer.yml  collector.toml  nlp_tuning.ncl  publisher.json
dipstick/containerfiles/: chainguard.Containerfile
dipstick/docs/: CITATIONS.adoc  just-cookbook.adoc
dipstick/docs/legacy/podman/: podman-compose.enhanced.yml  podman-compose.yml
dipstick/docs/man/: social-media-monitor.1
dipstick/infrastructure/database/: README.md  schema.sql
dipstick/infrastructure/database/migrations/: 001_initial_schema.sql
dipstick/infrastructure/database/virtuoso/: init-virtuoso.sql  virtuoso.ini
dipstick/infrastructure/monitoring/: loki.yml  prometheus.yml  promtail.yml
dipstick/services/agent-swarm/: Containerfile  deno.json
dipstick/services/agent-swarm/src/: swarm.ts
dipstick/services/analyzer-rescript/: Containerfile  deno.json  rescript.json
dipstick/services/analyzer-rescript/src/: Main.res
dipstick/services/analyzer-rescript/wasm/: Cargo.toml
dipstick/services/analyzer-rescript/wasm/src/: lib.rs
dipstick/services/collector/: Cargo.toml  Containerfile  README.md  TEST-NEEDS.md
dipstick/services/collector/benches/: collector_bench.rs
dipstick/services/collector/src/: config.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  platforms.rs  scheduler.rs  scraper.rs
dipstick/services/collector/tests/: aspect_tests.rs  contract_tests.rs  property_tests.rs  reflexive_tests.rs  unit_tests.rs
dipstick/services/dashboard/: Containerfile  mix.exs
dipstick/services/dashboard/lib/nuj_dashboard/: application.ex
dipstick/services/dashboard/lib/nuj_dashboard_web/: endpoint.ex  router.ex
dipstick/services/dashboard/lib/nuj_dashboard_web/live/dashboard_live/: index.ex
dipstick/services/database-adapter/: virtuoso_adapter.py
dipstick/services/gateway-rescript/: Containerfile  deno.json  rescript.json
dipstick/services/gateway-rescript/src/: Gateway.res
dipstick/services/pestle-observatory/: Containerfile  deno.json
dipstick/services/pestle-observatory/src/: observatory.ts
dipstick/services/publisher-deno/: Containerfile  deno.json
dipstick/services/publisher-deno/src/: publisher.ts
dipstick/services/scraper-julia/: Project.toml
dipstick/services/scraper-julia/src/: NUJScraper.jl
dipstick/services/tui-ada/src/: nuj_tui.adb
dipstick/services/xtdb-temporal/: xtdb_adapter.clj
dipstick/shared/schemas/: api-spec.yaml
dipstick/tools/autoconfig/: smtp_autoconfig.py
dipstick/tools/cli/: backup.sh  migrate.sh  restore.sh  rollback.sh
dipstick/tools/scripts/: container-build.sh  dev-logs.sh  dev-start.sh  dev-stop.sh  local-check.sh  setup-dev.sh  test-all.sh
polygraph/: CHANGELOG.adoc  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_SUMMARY.md  Justfile  MAINTAINERS.md  README.adoc  RSR_COMPLIANCE_REPORT.md
polygraph/.github/: dependabot.yml
polygraph/.github/workflows/: ci.yml  codeql.yml  deploy.yml  rsr-antipattern.yml  security-policy.yml  ts-blocker.yml
polygraph/backend/: Cargo-wasm.toml  Cargo.toml  Containerfile
polygraph/backend/src/: lib.rs  main.rs
polygraph/backend/src/api/: graphql.rs  mod.rs
polygraph/backend/src/db/: arango.rs  cache.rs  mod.rs  xtdb.rs
polygraph/backend/src/ml/: credibility.rs  mod.rs  nlp.rs
polygraph/backend/src/models/: mod.rs
polygraph/backend/src/services/: claim_service.rs  fact_check_apis.rs  mod.rs
polygraph/backend/src/wasm/: credibility.rs  mod.rs
polygraph/browser-extension/: manifest.json
polygraph/browser-extension/public/: popup.html
polygraph/browser-extension/src/: background.js  content.css  content.js  popup.js
polygraph/docs/: API.md  ARCHITECTURE.md  CITATIONS.adoc  DEPLOYMENT.md
polygraph/elixir/: Containerfile  mix.exs
polygraph/elixir/lib/polygraph/: application.ex  verisimdb.ex
polygraph/elixir/lib/polygraph/crdt/: claim_store.ex
polygraph/frontend/: Containerfile  deno.json  index.html  package.json  rescript.json
polygraph/frontend/src/: Index.res
polygraph/frontend/src/graphql/: Client.res  Mutations.res  Queries.res
polygraph/frontend/src/pages/: VerifyPage.res
polygraph/infrastructure/configs/: nginx.conf
polygraph/infrastructure/configs/ssl/: .gitkeep  README.md
polygraph/infrastructure/podman/: compose.yaml
polygraph/scripts/: check-rsr-compliance.sh  start-dev.sh  stop-dev.sh
