[package]
name = "social-media-polygraph"
version = "0.2.0"
edition = "2021"
authors = ["Social Media Polygraph Contributors"]
license = "MIT OR Palimpsest-0.8"
description = "AI-powered social media fact-checking with memory safety and formal verification"
repository = "https://github.com/hyperpolymath/social-media-polygraph"
readme = "README.md"
keywords = ["fact-checking", "verification", "graphql", "wasm", "distributed"]
categories = ["web-programming", "wasm", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }

# GraphQL
async-graphql = { version = "7.0", features = ["dataloader", "tracing", "apollo_tracing"] }
async-graphql-axum = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database clients
arangors = "0.6"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Cache (Dragonfly/Redis)
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }

# Cryptography & Auth
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# NLP (via WASM or FFI)
rust-bert = "0.22"
tokenizers = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
hyper = { version = "1.1", features = ["full"] }

# Metrics
prometheus = "0.13"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Type-safe builder pattern
typed-builder = "0.18"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[[bench]]
name = "credibility_scoring"
harness = false

[[bench]]
name = "graphql_queries"
harness = false

[lib]
name = "polygraph"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "polygraph-server"
path = "src/main.rs"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures"]
