[package]
name = "nuj-collector"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <6759885+hyperpolymath@users.noreply.github.com>"]
description = "Platform monitoring and policy collection service"

[lib]
name = "nuj_collector"
path = "src/lib.rs"

[[bin]]
name = "nuj-collector"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.10"

# Database
sqlx = { version = "0.8.1", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.13.2", features = ["json", "cookies", "gzip"] }
scraper = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"
dotenv = "0.15"

# Metrics
prometheus = { version = "0.14.0", features = ["process"] }
bigdecimal = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"

[[bench]]
name = "collector_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
